# llm-yt-tracker

./: .env.example  .gitignore  README.md  REPORT.md  channels.yaml  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
docs/: architecture.md  deployment.md
docs/plans/: 2026-05-23-implementation.md
docs/specs/: 2026-05-23-design.md
pipeline/: __init__.py  build_table.py  config.py  fetch_videos.py  publish.py  run.py  state.json  state.py  summarise.py  tags.py  transcribe.py
scripts/: register_task.ps1
tests/: test_build_table.py  test_fetch_videos.py  test_state.py  test_summarise.py  test_tags.py  test_transcribe.py
tests/fixtures/: transcript_sample_1.txt
web/: app.js  index.html  style.css  videos.json
