[project]
name = "llm-yt-tracker"
version = "1.0.0"
description = "LLM YouTube Landscape Tracker — discover, transcribe, summarise, publish."
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client==2.149.0",
    "yt-dlp==2025.12.8",
    "openai==1.58.1",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
